[package]
authors = [
    "Dana Jansens <danakj@orodu.net>",
    "Ryan Butler <thebutlah@gmail.com>",
]
description = "An attribute macro to specify a path to a module dynamically."
license = "MIT/Apache-2.0"
name = "dynpath"
version = "0.1.5"
repository = "https://github.com/danakj/dynpath"
homepage = "https://github.com/danakj/dynpath"
documentation = "https://docs.rs/dynpath"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
